Rework of index calculations to allow for climatology from a different ds

--- a/tests/functional/testSstIndexCalcs.ipynb
+++ b/tests/functional/testSstIndexCalcs.ipynb
@@ -468,17 +468,17 @@
        "       cftime.DatetimeNoLeap(2005, 11, 30, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(2005, 12, 31, 0, 0, 0, 0)], dtype=object)\n",
        "Coordinates:\n",
-       "  * time     (time) object 0850-01-31 00:00:00 ... 2005-12-31 00:00:00</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'time'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 13872</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-9771d684-db4e-41d4-9847-9f41187b6731' class='xr-array-in' type='checkbox' checked><label for='section-9771d684-db4e-41d4-9847-9f41187b6731' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0850-01-31 00:00:00 0850-02-28 00:00:00 ... 2005-12-31 00:00:00</span></div><div class='xr-array-data'><pre>array([cftime.DatetimeNoLeap(850, 1, 31, 0, 0, 0, 0),\n",
+       "  * time     (time) object 0850-01-31 00:00:00 ... 2005-12-31 00:00:00</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'time'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>time</span>: 13872</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-7b7c2d39-9970-45c9-a7e8-474c0667a011' class='xr-array-in' type='checkbox' checked><label for='section-7b7c2d39-9970-45c9-a7e8-474c0667a011' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0850-01-31 00:00:00 0850-02-28 00:00:00 ... 2005-12-31 00:00:00</span></div><div class='xr-array-data'><pre>array([cftime.DatetimeNoLeap(850, 1, 31, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(850, 2, 28, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(850, 3, 31, 0, 0, 0, 0), ...,\n",
        "       cftime.DatetimeNoLeap(2005, 10, 31, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(2005, 11, 30, 0, 0, 0, 0),\n",
-       "       cftime.DatetimeNoLeap(2005, 12, 31, 0, 0, 0, 0)], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-c2ffed69-a276-4632-9e2f-8a6c164d53fd' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c2ffed69-a276-4632-9e2f-8a6c164d53fd' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>0850-01-31 00:00:00 ... 2005-12-...</div><input id='attrs-f5c5a8a8-c452-4610-88dd-2ff5012d84fc' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f5c5a8a8-c452-4610-88dd-2ff5012d84fc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e65b8b65-9b63-4c58-8f76-f3a5728dde08' class='xr-var-data-in' type='checkbox'><label for='data-e65b8b65-9b63-4c58-8f76-f3a5728dde08' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([cftime.DatetimeNoLeap(850, 1, 31, 0, 0, 0, 0),\n",
+       "       cftime.DatetimeNoLeap(2005, 12, 31, 0, 0, 0, 0)], dtype=object)</pre></div></div></li><li class='xr-section-item'><input id='section-0420cfae-544f-49c6-a3c8-df7ed0544bbf' class='xr-section-summary-in' type='checkbox'  checked><label for='section-0420cfae-544f-49c6-a3c8-df7ed0544bbf' class='xr-section-summary' >Coordinates: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>0850-01-31 00:00:00 ... 2005-12-...</div><input id='attrs-f472e2df-e938-46b5-9d39-f3dec9ded209' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f472e2df-e938-46b5-9d39-f3dec9ded209' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-9fce6f8d-7979-407c-af8f-9359c262b85e' class='xr-var-data-in' type='checkbox'><label for='data-9fce6f8d-7979-407c-af8f-9359c262b85e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([cftime.DatetimeNoLeap(850, 1, 31, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(850, 2, 28, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(850, 3, 31, 0, 0, 0, 0), ...,\n",
        "       cftime.DatetimeNoLeap(2005, 10, 31, 0, 0, 0, 0),\n",
        "       cftime.DatetimeNoLeap(2005, 11, 30, 0, 0, 0, 0),\n",
-       "       cftime.DatetimeNoLeap(2005, 12, 31, 0, 0, 0, 0)], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-b6c3e032-5b47-4193-8038-5c0af8a5d622' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-b6c3e032-5b47-4193-8038-5c0af8a5d622' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "       cftime.DatetimeNoLeap(2005, 12, 31, 0, 0, 0, 0)], dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-b87092a7-53b0-49ca-b762-d3da6de25217' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-b87092a7-53b0-49ca-b762-d3da6de25217' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'time' (time: 13872)>\n",
@@ -569,6 +569,8 @@
       "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
       "    ...     array[indexer]\n",
       "  value = value[(slice(None),) * axis + (subkey,)]\n",
+      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1369: PerformanceWarning: Slicing with an out-of-order index is generating 97 times more chunks\n",
+      "  return self.array[key]\n",
       "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1375: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
       "chunk and silence this warning, set the option\n",
       "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
@@ -589,58 +591,11 @@
       "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
       "    ...     array[indexer]\n",
       "  value = value[(slice(None),) * axis + (subkey,)]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1375: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  value = value[(slice(None),) * axis + (subkey,)]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1369: PerformanceWarning: Slicing with an out-of-order index is generating 97 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1375: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  value = value[(slice(None),) * axis + (subkey,)]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1375: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  value = value[(slice(None),) * axis + (subkey,)]\n",
       "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1369: PerformanceWarning: Slicing with an out-of-order index is generating 97 times more chunks\n",
       "  return self.array[key]\n",
       "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1369: PerformanceWarning: Slicing with an out-of-order index is generating 97 times more chunks\n",
       "  return self.array[key]\n",
       "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1369: PerformanceWarning: Slicing with an out-of-order index is generating 97 times more chunks\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1369: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
-      "  return self.array[key]\n",
-      "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1369: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
-      "chunk and silence this warning, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': False}):\n",
-      "    ...     array[indexer]\n",
-      "\n",
-      "To avoid creating the large chunks, set the option\n",
-      "    >>> with dask.config.set(**{'array.slicing.split_large_chunks': True}):\n",
-      "    ...     array[indexer]\n",
       "  return self.array[key]\n",
       "/Users/ajs/opt/anaconda3/lib/python3.8/site-packages/xarray/core/indexing.py:1369: PerformanceWarning: Slicing is producing a large chunk. To accept the large\n",
       "chunk and silence this warning, set the option\n",
@@ -679,8 +634,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
-      "Wall time: 4.77 µs\n"
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 5.72 µs\n"
      ]
     },
     {
@@ -866,7 +821,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff1d161cdc0>]"
+       "[<matplotlib.lines.Line2D at 0x7fa5297914c0>]"
       ]
      },
      "execution_count": 9,
@@ -912,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -926,10 +881,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fed9c0d8bb0>]"
+       "[<matplotlib.lines.Line2D at 0x7fa1fbe61a60>]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
