--- a/cesmTradIndeces.ipynb
+++ b/cesmTradIndeces.ipynb
@@ -659,7 +659,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some sanity checks to see if it looks ok:\n"
+    "# Some sanity checks to see if it looks ok:\n"
    ]
   },
   {
@@ -696,7 +696,7 @@
     "ax = fig.add_subplot(1,1,1)\n",
     "\n",
     "results.sel(experiment='001', index='nino34').plot(label='001')\n",
-    "results.sel(experiment='LME.002', index='nino34').plot(label='LME.002')\n",
+    "results.sel(experiment='LME.002', index='nino34').plot(label='LME.001')\n",
     "\n",
     "#Tidy up a bit\n",
     "plt.title(\"CESM Full Forcing Nino34 Ensemble\")\n",
@@ -1206,7 +1206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
