Updates for adding detrend

--- a/cesmRunAll.ipynb
+++ b/cesmRunAll.ipynb
@@ -31,15 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run calculateCesmMonthlyIndeces.ipynb"
+    "%run cesmTradIndecsCompounds.ipynb"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
