--- a/utils/compound.ipynb
+++ b/utils/compound.ipynb
@@ -35,8 +35,8 @@
     "    #enso and iod events are positive, sam events are negative\n",
     "\n",
     "    indexNames=list(critDa.index.values)\n",
-    "    firePos=list(set(_firePos).intersection(indexNames))\n",
-    "    fireNeg=list(set(_fireNeg).intersection(indexNames))\n",
+    "    firePos=list(set(_index.firePos).intersection(indexNames))\n",
+    "    fireNeg=list(set(_index.fireNeg).intersection(indexNames))\n",
     "    \n",
     "    posEvents=xarray.concat(\n",
     "        (\n",
@@ -60,18 +60,19 @@
     "        'index'\n",
     "    ) \n",
     "    \n",
+    "       \n",
     "    # amazingly you can sum booleans\n",
-    "    firePosCountDa=xarray.concat(\n",
+    "    firePosDa=xarray.concat(\n",
     "        (posEvents.sel(index=firePos), negEvents.sel(index=fireNeg)\n",
     "        ),\n",
-    "        'index').sum(dim='index')\n",
+    "        'index')\n",
     "    \n",
-    "    fireNegCountDa=-1*xarray.concat(\n",
+    "    fireNegDa=xarray.concat(\n",
     "        (negEvents.sel(index=firePos),posEvents.sel(index=fireNeg)\n",
     "        ),\n",
-    "        'index').sum(dim='index')\n",
+    "        'index')\n",
     "    \n",
-    "    return firePosCountDa, fireNegCountDa    "
+    "    return firePosDa, fireNegDa    "
    ]
   },
   {
