add test for compound util and tidy up cesm calcs

--- a/tests/utilTests/testAverageForTimePeriod.ipynb
+++ b/tests/utilTests/testAverageForTimePeriod.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -120,17 +120,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>nino12</th>\n",
-       "      <th>nino3</th>\n",
+       "      <th>nino34NoDetrend</th>\n",
+       "      <th>nino4NoDetrend</th>\n",
+       "      <th>westIONoDetrend</th>\n",
+       "      <th>eastIONoDetrend</th>\n",
+       "      <th>dmi</th>\n",
        "      <th>nino34</th>\n",
        "      <th>nino4</th>\n",
        "      <th>westIO</th>\n",
        "      <th>eastIO</th>\n",
-       "      <th>dmi</th>\n",
        "      <th>sam</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -144,62 +148,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1995</th>\n",
-       "      <td>2.57709</td>\n",
-       "      <td>2.67896</td>\n",
-       "      <td>2.50921</td>\n",
-       "      <td>3.04636</td>\n",
-       "      <td>2.66157</td>\n",
-       "      <td>2.04437</td>\n",
-       "      <td>2.53634</td>\n",
-       "      <td>2.25569</td>\n",
+       "      <td>2.44497</td>\n",
+       "      <td>2.36956</td>\n",
+       "      <td>1.96825</td>\n",
+       "      <td>2.69948</td>\n",
+       "      <td>2.09695</td>\n",
+       "      <td>1.84111</td>\n",
+       "      <td>2.62889</td>\n",
+       "      <td>3.11660</td>\n",
+       "      <td>2.81387</td>\n",
+       "      <td>2.83194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1996</th>\n",
-       "      <td>3.27948</td>\n",
-       "      <td>2.54613</td>\n",
-       "      <td>1.86305</td>\n",
-       "      <td>2.29522</td>\n",
-       "      <td>1.77373</td>\n",
-       "      <td>2.50348</td>\n",
-       "      <td>2.19254</td>\n",
-       "      <td>2.50402</td>\n",
+       "      <td>2.86742</td>\n",
+       "      <td>2.45421</td>\n",
+       "      <td>2.62511</td>\n",
+       "      <td>3.22929</td>\n",
+       "      <td>1.53736</td>\n",
+       "      <td>2.00400</td>\n",
+       "      <td>3.05116</td>\n",
+       "      <td>2.45358</td>\n",
+       "      <td>2.05932</td>\n",
+       "      <td>2.46055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1997</th>\n",
-       "      <td>3.49437</td>\n",
-       "      <td>3.14645</td>\n",
-       "      <td>2.91502</td>\n",
-       "      <td>2.15064</td>\n",
-       "      <td>2.26010</td>\n",
-       "      <td>1.95727</td>\n",
-       "      <td>2.54142</td>\n",
-       "      <td>3.18623</td>\n",
+       "      <td>3.24651</td>\n",
+       "      <td>2.14931</td>\n",
+       "      <td>3.34173</td>\n",
+       "      <td>1.96905</td>\n",
+       "      <td>2.93158</td>\n",
+       "      <td>2.44532</td>\n",
+       "      <td>2.56553</td>\n",
+       "      <td>2.26143</td>\n",
+       "      <td>1.87801</td>\n",
+       "      <td>1.85157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998</th>\n",
-       "      <td>1.87163</td>\n",
-       "      <td>2.75486</td>\n",
-       "      <td>2.13854</td>\n",
-       "      <td>2.58817</td>\n",
-       "      <td>2.61851</td>\n",
-       "      <td>2.47701</td>\n",
-       "      <td>2.13698</td>\n",
-       "      <td>2.62151</td>\n",
+       "      <td>1.86576</td>\n",
+       "      <td>3.09986</td>\n",
+       "      <td>2.34779</td>\n",
+       "      <td>2.46384</td>\n",
+       "      <td>2.08002</td>\n",
+       "      <td>2.47089</td>\n",
+       "      <td>2.64109</td>\n",
+       "      <td>2.27982</td>\n",
+       "      <td>2.61062</td>\n",
+       "      <td>3.10332</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       nino12    nino3   nino34    nino4   westIO   eastIO      dmi      sam\n",
-       "year                                                                        \n",
-       "1995  2.57709  2.67896  2.50921  3.04636  2.66157  2.04437  2.53634  2.25569\n",
-       "1996  3.27948  2.54613  1.86305  2.29522  1.77373  2.50348  2.19254  2.50402\n",
-       "1997  3.49437  3.14645  2.91502  2.15064  2.26010  1.95727  2.54142  3.18623\n",
-       "1998  1.87163  2.75486  2.13854  2.58817  2.61851  2.47701  2.13698  2.62151"
+       "      nino34NoDetrend  nino4NoDetrend  westIONoDetrend  eastIONoDetrend  \\\n",
+       "year                                                                      \n",
+       "1995          2.44497         2.36956          1.96825          2.69948   \n",
+       "1996          2.86742         2.45421          2.62511          3.22929   \n",
+       "1997          3.24651         2.14931          3.34173          1.96905   \n",
+       "1998          1.86576         3.09986          2.34779          2.46384   \n",
+       "\n",
+       "          dmi   nino34    nino4   westIO   eastIO      sam  \n",
+       "year                                                        \n",
+       "1995  2.09695  1.84111  2.62889  3.11660  2.81387  2.83194  \n",
+       "1996  1.53736  2.00400  3.05116  2.45358  2.05932  2.46055  \n",
+       "1997  2.93158  2.44532  2.56553  2.26143  1.87801  1.85157  \n",
+       "1998  2.08002  2.47089  2.64109  2.27982  2.61062  3.10332  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +229,7 @@
     "expectedAv.index.name='year'\n",
     "\n",
     "#for every index defined in the index file\n",
-    "for keys in ['nino12', 'nino3', 'nino34', 'nino4', 'westIO', 'eastIO', 'dmi', 'sam']:\n",
+    "for keys in _index.monthsOfInterest:\n",
     "    answer = list()\n",
     "    \n",
     "    #grab the time period defined in the index file\n",
@@ -249,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -273,17 +292,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>nino12</th>\n",
-       "      <th>nino3</th>\n",
+       "      <th>nino34NoDetrend</th>\n",
+       "      <th>nino4NoDetrend</th>\n",
+       "      <th>westIONoDetrend</th>\n",
+       "      <th>eastIONoDetrend</th>\n",
+       "      <th>dmi</th>\n",
        "      <th>nino34</th>\n",
        "      <th>nino4</th>\n",
        "      <th>westIO</th>\n",
        "      <th>eastIO</th>\n",
-       "      <th>dmi</th>\n",
        "      <th>sam</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -297,62 +320,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1995</th>\n",
-       "      <td>2.57709</td>\n",
-       "      <td>2.67896</td>\n",
-       "      <td>2.50921</td>\n",
-       "      <td>3.04636</td>\n",
-       "      <td>2.66157</td>\n",
-       "      <td>2.04437</td>\n",
-       "      <td>2.53634</td>\n",
-       "      <td>2.25569</td>\n",
+       "      <td>2.44497</td>\n",
+       "      <td>2.36956</td>\n",
+       "      <td>1.96825</td>\n",
+       "      <td>2.69948</td>\n",
+       "      <td>2.09695</td>\n",
+       "      <td>1.84111</td>\n",
+       "      <td>2.62889</td>\n",
+       "      <td>3.11660</td>\n",
+       "      <td>2.81387</td>\n",
+       "      <td>2.83194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1996</th>\n",
-       "      <td>3.27948</td>\n",
-       "      <td>2.54613</td>\n",
-       "      <td>1.86305</td>\n",
-       "      <td>2.29522</td>\n",
-       "      <td>1.77373</td>\n",
-       "      <td>2.50348</td>\n",
-       "      <td>2.19254</td>\n",
-       "      <td>2.50402</td>\n",
+       "      <td>2.86742</td>\n",
+       "      <td>2.45421</td>\n",
+       "      <td>2.62511</td>\n",
+       "      <td>3.22929</td>\n",
+       "      <td>1.53736</td>\n",
+       "      <td>2.00400</td>\n",
+       "      <td>3.05116</td>\n",
+       "      <td>2.45358</td>\n",
+       "      <td>2.05932</td>\n",
+       "      <td>2.46055</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1997</th>\n",
-       "      <td>3.49437</td>\n",
-       "      <td>3.14645</td>\n",
-       "      <td>2.91502</td>\n",
-       "      <td>2.15064</td>\n",
-       "      <td>2.26010</td>\n",
-       "      <td>1.95727</td>\n",
-       "      <td>2.54142</td>\n",
-       "      <td>3.18623</td>\n",
+       "      <td>3.24651</td>\n",
+       "      <td>2.14931</td>\n",
+       "      <td>3.34173</td>\n",
+       "      <td>1.96905</td>\n",
+       "      <td>2.93158</td>\n",
+       "      <td>2.44532</td>\n",
+       "      <td>2.56553</td>\n",
+       "      <td>2.26143</td>\n",
+       "      <td>1.87801</td>\n",
+       "      <td>1.85157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1998</th>\n",
-       "      <td>1.87163</td>\n",
-       "      <td>2.75486</td>\n",
-       "      <td>2.13854</td>\n",
-       "      <td>2.58817</td>\n",
-       "      <td>2.61851</td>\n",
-       "      <td>2.47701</td>\n",
-       "      <td>2.13698</td>\n",
-       "      <td>2.62151</td>\n",
+       "      <td>1.86576</td>\n",
+       "      <td>3.09986</td>\n",
+       "      <td>2.34779</td>\n",
+       "      <td>2.46384</td>\n",
+       "      <td>2.08002</td>\n",
+       "      <td>2.47089</td>\n",
+       "      <td>2.64109</td>\n",
+       "      <td>2.27982</td>\n",
+       "      <td>2.61062</td>\n",
+       "      <td>3.10332</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       nino12    nino3   nino34    nino4   westIO   eastIO      dmi      sam\n",
-       "year                                                                        \n",
-       "1995  2.57709  2.67896  2.50921  3.04636  2.66157  2.04437  2.53634  2.25569\n",
-       "1996  3.27948  2.54613  1.86305  2.29522  1.77373  2.50348  2.19254  2.50402\n",
-       "1997  3.49437  3.14645  2.91502  2.15064  2.26010  1.95727  2.54142  3.18623\n",
-       "1998  1.87163  2.75486  2.13854  2.58817  2.61851  2.47701  2.13698  2.62151"
+       "      nino34NoDetrend  nino4NoDetrend  westIONoDetrend  eastIONoDetrend  \\\n",
+       "year                                                                      \n",
+       "1995          2.44497         2.36956          1.96825          2.69948   \n",
+       "1996          2.86742         2.45421          2.62511          3.22929   \n",
+       "1997          3.24651         2.14931          3.34173          1.96905   \n",
+       "1998          1.86576         3.09986          2.34779          2.46384   \n",
+       "\n",
+       "          dmi   nino34    nino4   westIO   eastIO      sam  \n",
+       "year                                                        \n",
+       "1995  2.09695  1.84111  2.62889  3.11660  2.81387  2.83194  \n",
+       "1996  1.53736  2.00400  3.05116  2.45358  2.05932  2.46055  \n",
+       "1997  2.93158  2.44532  2.56553  2.26143  1.87801  1.85157  \n",
+       "1998  2.08002  2.47089  2.64109  2.27982  2.61062  3.10332  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,129 +401,43 @@
     "\n",
     "# do the calculation\n",
     "calculatedAvs=averageForTimePeriod(testXr)\n",
+    "\n",
     "calculatedAvs.round(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nino12</th>\n",
-       "      <th>nino3</th>\n",
-       "      <th>nino34</th>\n",
-       "      <th>nino4</th>\n",
-       "      <th>westIO</th>\n",
-       "      <th>eastIO</th>\n",
-       "      <th>dmi</th>\n",
-       "      <th>sam</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>year</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1995</th>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1996</th>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1997</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1998</th>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      nino12  nino3  nino34  nino4  westIO  eastIO    dmi   sam\n",
-       "year                                                           \n",
-       "1995   False   True   False   True    True    True  False  True\n",
-       "1996    True  False    True   True    True    True  False  True\n",
-       "1997   False  False    True  False    True    True  False  True\n",
-       "1998   False  False   False   True    True    True  False  True"
+       "array([[ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True],\n",
+       "       [ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculatedAvs==expectedAv"
+    "numpy.isclose(calculatedAvs, expectedAv)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "These values are the same, but somewhere in there the last digit (of a float64) ended up different. Not overly significant."
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
