--- a/utils/compound.ipynb
+++ b/utils/compound.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "03304ee3-a146-4aa6-b357-0569606acdf1",
    "metadata": {},
    "outputs": [],
@@ -10,13 +10,13 @@
     "import xarray\n",
     "\n",
     "import sys\n",
-    "sys.path.append('../')\n",
+    "sys.path.append(sys.path[0] + '/..')\n",
     "import utils._indexDefinitions as _index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "bf6c0c32-8387-4b1a-ab7b-1cec9ebcc5a1",
    "metadata": {},
    "outputs": [],
