Updates to CESM results

--- a/utils/compound.ipynb
+++ b/utils/compound.ipynb
@@ -26,18 +26,19 @@
     "    \n",
     "    Then it sums events which are fire promoting or not-fire promoting.\n",
     "    \n",
-    "    Should return two dataArrays with the count of fire Promoting and non fire Promoting modes for the model and year ranges in the input data.\n",
+    "    Should return two dataArrays with the count of fire Promoting and non fire Promoting modes for the models and years in the input data.\n",
     "    \n",
     "    \"\"\"\n",
     "\n",
-    "    #events are greater than or less than the criteria\n",
+    "\n",
     "\n",
     "    #enso and iod events are positive, sam events are negative\n",
-    "\n",
     "    indexNames=list(critDa.index.values)\n",
+    "    \n",
     "    firePos=list(set(_index.firePos).intersection(indexNames))\n",
     "    fireNeg=list(set(_index.fireNeg).intersection(indexNames))\n",
-    "    \n",
+    "\n",
+    "    #events are greater than or less than the criteria\n",
     "    posEvents=xarray.concat(\n",
     "        (\n",
     "            [\n",
@@ -60,13 +61,13 @@
     "        'index'\n",
     "    ) \n",
     "    \n",
-    "       \n",
-    "    # amazingly you can sum booleans\n",
+    "    # a positive impact is a positive event with a positive impact, or a negative event with a negative impact\n",
     "    firePosDa=xarray.concat(\n",
     "        (posEvents.sel(index=firePos), negEvents.sel(index=fireNeg)\n",
     "        ),\n",
     "        'index')\n",
     "    \n",
+    "    # a negative impact is a negative event with a positive impact, or a positive event with a negative impact\n",
     "    fireNegDa=xarray.concat(\n",
     "        (negEvents.sel(index=firePos),posEvents.sel(index=fireNeg)\n",
     "        ),\n",
