Calculation for compounding events by pairs

--- a/utils/compound.ipynb
+++ b/utils/compound.ipynb
@@ -78,8 +78,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "7a1a8e67-e71d-4259-a3b4-50eacff85a62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compound(fireDa):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    \n",
+    "    For now, assuming there are only three indeces being assessed, more should be possible, but not in scope\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
+    "    #How many events were there in each year?\n",
+    "    fireCount=fireDa.sum(dim='index')\n",
+    "    fireCount=fireCount.assign_coords(index='count')\n",
+    "    fireCount=fireCount.expand_dims('index')\n",
+    "    fireDa = xarray.concat([fireDa, fireCount],'index')\n",
+    "\n",
+    "    #Which indices are we using?\n",
+    "    indexNames=firePos.index.values\n",
+    "\n",
+    "    ensoIndex=(set(_index.enso).intersection(indexNames))\n",
+    "    iodIndex=(set(_index.iod).intersection(indexNames))\n",
+    "    samIndex=(set(_index.sam).intersection(indexNames))\n",
+    "\n",
+    "    indexNames=[*ensoIndex, *iodIndex, *samIndex]\n",
+    "    \n",
+    "    #For now, limiting ourselves to one for each driver\n",
+    "    if len(ensoIndex)!=1:\n",
+    "        raise Error('number of enso indeces is not 1')\n",
+    "    elif len(iodIndex)!=1:\n",
+    "        raise Error('number of iod indeces is not 1')\n",
+    "    elif len(samIndex)!=1:\n",
+    "        raise Error('number of sam indeces is not 1')\n",
+    "\n",
+    "    #Which years are there all three\n",
+    "    threeDa=(fireDa.sel(index='count')==3)\n",
+    "    threeDa['index']='all3'\n",
+    "    threeDa=threeDa.expand_dims('index')\n",
+    "    fireDa=xarray.concat([fireDa,threeDa], 'index')\n",
+    "\n",
+    "    pairs=list()\n",
+    "    \n",
+    "    #Match each index with those further along the index list\n",
+    "    #(Nested for loops are probably bad juju)\n",
+    "    for i1 in range(0,len(indexNames)):\n",
+    "        for i2 in range(i1+1, len(indexNames)):\n",
+    "            #Its a compound of those two, if they both occur, and excluding if its a compound of all three\n",
+    "            tempDa=(\n",
+    "                fireDa.sel(index=indexNames[i1])*\n",
+    "                fireDa.sel(index=indexNames[i2])*\n",
+    "                (fireDa.sel(index='all3')==False)\n",
+    "            )\n",
+    "            tempDa=tempDa.assign_coords(index=indexNames[i1]+'+'+indexNames[i2])\n",
+    "            tempDa=tempDa.expand_dims('index')\n",
+    "            fireDa=xarray.concat([fireDa,tempDa], 'index', combine_attrs='drop_conflicts')\n",
+    "            \n",
+    "            pairs.append(indexNames[i1]+'+'+indexNames[i2])\n",
+    "            \n",
+    "    fireDa=fireDa.assign_attrs({**fireDa.attrs, 'pairs':pairs})\n",
+    "            \n",
+    "    return fireDa"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "fb7b8ce5-26eb-4f6d-97ed-9bd45f08f255",
+   "id": "0348b793-32d7-4079-b37b-a79273b404d0",
    "metadata": {},
    "outputs": [],
    "source": []
